# kakveda

./: .gitignore  .~lock.FeaturesAndComparision.docx#  .~lock.Figures.docx#  .~lock.ProvisionalSpecification.docx#  CLA.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.prod.yml  docker-compose.yml  kakveda.md  pyproject.toml  requirements.txt  test_commit.txt
config/: config.yaml
data/: dashboard.db.bak-20260205T025150Z  failures.jsonl  failures.jsonl.bak-20260205T025150Z  health.jsonl  health.jsonl.bak-20260205T025150Z  patterns.jsonl  patterns.jsonl.bak-20260205T025150Z
docs/: COMPARISON.md  agents.md  architecture.md  concepts.md  failure-intelligence.md
docs/figures/: README.md
kakveda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
kakveda_cli/: __init__.py  cli.py  compose.py  config.py  prompts.py
scripts/: demo_client.py  render_figures.py
services/: __init__.py
services/agent_echo/: Dockerfile  app.py
services/agent_echo/tests/: test_agent_echo_smoke.py
services/child_edu_agent/: Dockerfile  README.md  __init__.py  app.py  requirements.txt
services/child_edu_agent/templates/: index.html
services/dashboard/: Dockerfile  app.py  auth.py  db.py  rbac.py
services/dashboard/static/: style.css
services/dashboard/templates/: admin_agents.html  admin_purge_demo.html  admin_users.html  agents.html  dashboard.html  dataset_detail.html  datasets.html  eval.html  eval_detail.html  experiment_detail.html  experiments.html  failure_detail.html  forgot.html  health.html  login.html  playground.html  projects.html  prompt_detail.html  prompts.html  register.html  reset.html  run_detail.html  runs.html  scenarios.html  warnings.html
services/dashboard/tests/: test_dashboard_smoke.py
services/event_bus/: Dockerfile  app.py
services/failure_classifier/: Dockerfile  app.py
services/gfkb/: Dockerfile  app.py
services/health_scoring/: Dockerfile  app.py
services/ingestion/: Dockerfile  app.py
services/pattern_detector/: Dockerfile  app.py
services/shared/: config.py  fingerprint.py  models.py  otel.py  redis_helpers.py  runtime.py  similarity.py
services/warning_policy/: Dockerfile  app.py
shared/: __init__.py  otel.py  redis_helpers.py  runtime.py
tests/: test_cli.py  test_similarity.py
