[project]
name = "kakveda"
version = "1.0.0"
description = "Kakveda – LLM Failure Intelligence Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "Prateek Chaudhary", email = "prateek@kakveda.com"}
]
maintainers = [
    {name = "Prateek Chaudhary", email = "prateek@kakveda.com"}
]
keywords = ["llm", "failure-intelligence", "observability", "mlops", "ai-reliability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://kakveda.com"
Documentation = "https://github.com/prateekdevisingh/kakveda/tree/main/docs"
Repository = "https://github.com/prateekdevisingh/kakveda"
Issues = "https://github.com/prateekdevisingh/kakveda/issues"

[project.scripts]
kakveda = "kakveda_cli.cli:main"

[tool.setuptools.packages.find]
include = ["kakveda_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
